--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 ### Business Layer   ######################
 ###########################################
 # WebApplication Type Setting
-spring.main.web-application-type=none
+spring.main.web-application-type=servlet
 
 # Banner Setting
 spring.main.banner-mode=off
@@ -14,7 +14,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA Setting
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -23,3 +23,15 @@ spring.jpa.properties.hibernate.format_sql=true
 # Logging Setting
 logging.level.org.hibernate=info
 
+######################################
+###    Presentation Layer     ########
+######################################
+
+
+# Thymeleaf Cache Setting
+spring.thymeleaf.cache=false
+
+
+#Loggin Setting
+logging.level.org.springframework.web=debug
+logging.level.org.springframework.security=debug
