standard setting(swegger, db connecting file hide, aop ...)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,37 +1,42 @@
-###########################################
-### Business Layer   ######################
-###########################################
-# WebApplication Type Setting
-spring.main.web-application-type=servlet
-
-# Banner Setting
-spring.main.banner-mode=off
-
-# DataSource Setting
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=sa
-spring.datasource.password=
-
-# JPA Setting
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.format_sql=true
-
-# Logging Setting
-logging.level.org.hibernate=info
-
-######################################
-###    Presentation Layer     ########
-######################################
-
-
-# Thymeleaf Cache Setting
-spring.thymeleaf.cache=false
-
-
-#Loggin Setting
-logging.level.org.springframework.web=debug
-logging.level.org.springframework.security=debug
+############################################
+#### Business Layer   ######################
+############################################
+## WebApplication Type Setting
+#spring.main.web-application-type=servlet
+#
+## Banner Setting
+#spring.main.banner-mode=off
+#
+## DataSource Setting
+##spring.datasource.driver-class-name=org.h2.Driver
+##spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+##spring.datasource.username=sa
+##spring.datasource.password=
+#spring.jpa.database=mysql
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://djangotest.c2s4gk9fjluq.ap-northeast-2.rds.amazonaws.com:3306/springboottest?characterEncoding=euc_kr
+#spring.datasource.username=djangotest
+#spring.datasource.password=11111111
+#
+## JPA Setting
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=false
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.use-new-id-generator-mappings=true
+## Logging Setting
+#logging.level.org.hibernate=info
+#
+#######################################
+####    Presentation Layer     ########
+#######################################
+#
+#
+## Thymeleaf Cache Setting
+#spring.thymeleaf.cache=false
+#
+#
+##Loggin Setting
+#logging.level.org.springframework.web=debug
+#logging.level.org.springframework.security=debug
